Removing Shiro Config.

--- a/src/main/webapp/templates/master.xhtml
+++ b/src/main/webapp/templates/master.xhtml
@@ -42,7 +42,7 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><a href="#login"><i class="icon-lock"></i> Sign In</a></li>
+						<li><a href="/login.xhtml"><i class="icon-lock"></i> Sign In</a></li>
 					</ul>
 				</div>
 
