--- a/src/main/webapp/templates/master.xhtml
+++ b/src/main/webapp/templates/master.xhtml
@@ -11,10 +11,11 @@
 	<meta name="description"
 		content="Internet based DiveLog for use with Scuba Diving"></meta>
 	<meta name="author" content="Bryan Saunders"></meta>
+	<ui:param name="root" value="#{request.contextPath}/"></ui:param>
 
 	<!-- Stylesheets -->
-	<link href="css/bootstrap.min.css" rel="stylesheet"></link>
-	<link href="css/custom.css" rel="stylesheet"></link>
+	<link href="#{root}css/bootstrap.min.css" rel="stylesheet"></link>
+	<link href="#{root}css/custom.css" rel="stylesheet"></link>
 
 	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -33,32 +34,32 @@
 				<a class="btn btn-navbar" data-toggle="collapse"
 					data-target=".nav-collapse"> <span class="icon-bar"></span> <span
 					class="icon-bar"></span> <span class="icon-bar"></span>
-				</a> <a class="brand" href="/">BSNet-DiveLog</a>
+				</a> <a class="brand" href="#{root}">BSNet-DiveLog</a>
 
 
 				<c:if test="#{!identity.loggedIn}">
 					<div class="btn-group pull-right">
-						<a class="btn btn-primary" href="/register.xhtml"><i
+						<a class="btn btn-primary" href="#{root}register.xhtml"><i
 							class="icon-pencil icon-white"></i> Register</a>
 						<button class="btn btn-primary dropdown-toggle"
 							data-toggle="dropdown">
 							<span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu">
-							<li><a href="/login.xhtml"><i class="icon-lock"></i> Sign In</a></li>
+							<li><a href="#{root}login.xhtml"><i class="icon-lock"></i> Sign In</a></li>
 						</ul>
 					</div>
 				</c:if>
 				<c:if test="#{identity.loggedIn}">
 					<div class="btn-group pull-right">
-						<a class="btn btn-info" href="/user/account.xhtml"><i
+						<a class="btn btn-info" href="#{root}user/account.xhtml"><i
 							class="icon-cog icon-white"></i> Account</a>
 						<button class="btn btn-info dropdown-toggle"
 							data-toggle="dropdown">
 							<span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu">
-							<li><a href="/logout.xhtml"><i class="icon-lock"></i> Sign Out</a></li>
+							<h:form><li><h:commandLink action="#{identity.logout}"><i class="icon-lock"></i> Sign Out</h:commandLink></li></h:form>
 						</ul>
 					</div>
 				</c:if>
@@ -66,7 +67,7 @@
 
 				<div class="nav-collapse">
 					<ul class="nav">
-						<li><a href="/index.xhtml">Home</a></li>
+						<li><a href="#{root}index.xhtml">Home</a></li>
 					</ul>
 				</div>
 				<!--/.nav-collapse -->
@@ -79,14 +80,12 @@
 			<div class="span3">
 				<div class="well tabbable">
 					<!-- Only required for left/right tabs -->
-					<c:if test="#{identity.loggedIn}">
-						<ul class="nav nav-tabs">
-							<li><a href="#publicTab" data-toggle="tab">Public</a></li>
-							<li class="active"><a href="#privateTab" data-toggle="tab">Private</a></li>
-						</ul>
-					</c:if>
+					<ul class="nav nav-tabs">
+						<li class="#{identity.loggedIn ? '' : 'active'}"><a href="#publicTab" data-toggle="tab">Public</a></li>
+						<c:if test="#{identity.loggedIn}"><li class="active"><a href="#privateTab" data-toggle="tab">Private</a></li></c:if>
+					</ul>
 					<div class="tab-content">
-						<div class="tab-pane" id="publicTab">
+						<div class="tab-pane #{identity.loggedIn ? '' : 'active'}" id="publicTab">
 							<ul class="nav nav-list">
 								<li class="nav-header">Log Book</li>
 								<li><a href="#">Dives</a></li>
@@ -99,7 +98,7 @@
 							</ul>
 						</div>
 						<c:if test="#{identity.loggedIn}">
-							<div class="tab-pane active" id="privateTab">
+							<div class="tab-pane #{identity.loggedIn ? 'active' : ''}" id="privateTab">
 								<ul class="nav nav-list">
 									<li class="nav-header">Log Book</li>
 									<li class="dropdown" id="divesMenu"><a
@@ -244,7 +243,7 @@
 	<!--/.fluid-container-->
 
 	<!-- JavaScript - Loads Faster at Bottom of Page -->
-	<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="#{root}js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script src="#{root}js/bootstrap.min.js" type="text/javascript"></script>
 </h:body>
 </html>
