#14: Refactored Drone UI Tests to work with Persistence [ci skip]

--- a/src/main/webapp/templates/master.xhtml
+++ b/src/main/webapp/templates/master.xhtml
@@ -80,7 +80,7 @@
 								<span class="caret"></span>
 							</button>
 							<ul class="dropdown-menu">
-								<h:form><li><h:commandLink id="accountOption_logout" action="#{identity.logout}"><i class="icon-lock"></i> Sign Out</h:commandLink></li></h:form>
+								<h:form id="logout"><li><h:commandLink id="accountOption_logout" action="#{identity.logout}"><i class="icon-lock"></i> Sign Out</h:commandLink></li></h:form>
 							</ul>
 					</c:if>
 				</div>
